Fixing methods